<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 - 2013, S2H Mobile

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<CheckBoxPreference
        android:key="pref_camera"
        android:title="@string/camera_title"
        android:summary="@string/camera_summary"
        android:defaultValue="@bool/pref_camera_default" />
          
	<ListPreference
        android:key="pref_routing"
        android:title="@string/routing_title"
        android:dialogTitle="@string/routing_dialog"
        android:entries="@array/routing_entries"
        android:entryValues="@array/routing_values"
        android:defaultValue="@string/routing_default" />
    
</PreferenceScreen>